--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
-  "name": "nedux",
-  "version": "1.0.2",
+  "name": "react-nedux",
+  "version": "1.0.0",
   "description": "the next redux state management",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "lib/react-nedux.js",
+  "unpkg": "dist/react-nedux.js",
+  "module": "es/react-nedux.js",
+  "types": "types/index.d.ts",
+  "bugs": "https://github.com/lucasmrdt/react-nedux/issues",
+  "files": [
+    "dist",
+    "lib",
+    "es",
+    "src"
+  ],
   "repository": {
-    "url": "https://github.com/lucasmrdt/nedux"
+    "url": "https://github.com/lucasmrdt/react-nedux"
   },
+  "authors": [
+    "Lucas Marandat <lucas.marandat@epitech.eu> (https://github.com/lucasmrdt)"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublish": "tsc"
+    "check-types": "tsc --noEmit",
+    "build": "rollup -c",
+    "prepublish": "npm run check-types && npm run build"
   },
   "keywords": [
     "nedux",
@@ -20,10 +34,23 @@
   ],
   "author": "lucasmrdt",
   "license": "ISC",
-  "devDependencies": {
-    "typescript": "^3.7.3"
+  "peerDependencies": {
+    "react": ">=16.12.0",
+    "nedux": ">=1.0.4"
   },
-  "dependencies": {
-    "rxjs": "^6.5.3"
+  "devDependencies": {
+    "@babel/core": "^7.7.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@babel/preset-typescript": "^7.7.4",
+    "@rollup/plugin-node-resolve": "^6.0.0",
+    "@rollup/plugin-replace": "^2.2.1",
+    "rollup": "^1.27.8",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-terser": "^5.1.2",
+    "rollup-plugin-typescript2": "^0.25.3",
+    "serialize-javascript": ">=2.1.1",
+    "@types/react": "^16.9.15",
+    "typescript": "^3.7.3"
   }
 }
