--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     /* Basic Options */
-    "target": "ES5" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */ ,
-    "module": "CommonJS" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */ ,
+    "target": "ESNext" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */ ,
+    "module": "ESNext" /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */ ,
     "lib": [
       "dom",
       "es2017"
@@ -12,7 +12,7 @@
     "jsx": "react" /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */ ,
     "declaration": true /* Generates corresponding '.d.ts' file. */ ,
     // "declarationMap": true /* Generates a sourcemap for each corresponding '.d.ts' file. */,
-    "declarationDir": "./dist" /* Output directory for generated declaration files. */ ,
+    "declarationDir": "./types" /* Output directory for generated declaration files. */ ,
     // "emitDeclarationOnly": true /* Only emit ‘.d.ts’ declaration files. */,
     "sourceMap": true /* Generates corresponding '.map' file. */ ,
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
