add keywords and refresh README.md

--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
   },
   "keywords": [
     "nedux",
-    "state",
-    "management",
-    "functionnal",
-    "store"
+    "react-nedux",
+    "react-state-management",
+    "state-management",
+    "react-store",
+    "typescript",
+    "nedux-provider"
   ],
   "author": "lucasmrdt",
   "license": "ISC",
