--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "typescript": "^3.7.3"
   },
   "dependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.7.5",
     "nedux": "^1.0.21"
   }
 }
